// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CreatorNotFound snapshots > with a known username 1`] = `
<div>
  <main
    class="max-w-4xl mx-auto px-4 py-8 py-10 focus:outline-none"
    id="main-content"
    tabindex="-1"
  >
    <div
      class="bg-white border-3 border-black p-8   space-y-4"
      style="box-shadow: 4px 4px 0px 0px rgba(0,0,0,1);"
    >
      <p
        class="text-xs font-black uppercase tracking-[0.25em] text-gray-500"
      >
        Creator lookup
      </p>
      <h1
        class="text-3xl font-black uppercase"
      >
        Creator not found
      </h1>
      <p
        class="text-sm font-bold text-gray-700"
      >
        We could not find @
        alice
        . Check the username and try again.
      </p>
      <a
        class="inline-flex"
        data-discover="true"
        href="/leaderboard"
      >
        <button
          class="inline-flex items-center justify-center gap-2 font-bold uppercase tracking-wide transition-transform duration-200 border-2 border-black focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 bg-black text-white hover:-translate-x-1 hover:-translate-y-1 px-6 py-3 text-base "
          style="box-shadow: 4px 4px 0px 0px rgba(0,0,0,1);"
          type="button"
        >
          Browse creators
        </button>
      </a>
    </div>
  </main>
</div>
`;

exports[`CreatorNotFound snapshots > with no username (fallback to "unknown") 1`] = `
<div>
  <main
    class="max-w-4xl mx-auto px-4 py-8 py-10 focus:outline-none"
    id="main-content"
    tabindex="-1"
  >
    <div
      class="bg-white border-3 border-black p-8   space-y-4"
      style="box-shadow: 4px 4px 0px 0px rgba(0,0,0,1);"
    >
      <p
        class="text-xs font-black uppercase tracking-[0.25em] text-gray-500"
      >
        Creator lookup
      </p>
      <h1
        class="text-3xl font-black uppercase"
      >
        Creator not found
      </h1>
      <p
        class="text-sm font-bold text-gray-700"
      >
        We could not find @
        unknown
        . Check the username and try again.
      </p>
      <a
        class="inline-flex"
        data-discover="true"
        href="/leaderboard"
      >
        <button
          class="inline-flex items-center justify-center gap-2 font-bold uppercase tracking-wide transition-transform duration-200 border-2 border-black focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 bg-black text-white hover:-translate-x-1 hover:-translate-y-1 px-6 py-3 text-base "
          style="box-shadow: 4px 4px 0px 0px rgba(0,0,0,1);"
          type="button"
        >
          Browse creators
        </button>
      </a>
    </div>
  </main>
</div>
`;

exports[`FeaturesSection snapshots > renders all feature cards 1`] = `
<div>
  <section
    class="py-20 px-4 bg-off-white border-t-3 border-b-3 border-black"
    id="features"
  >
    <div
      class="max-w-6xl mx-auto"
    >
      <h2
        class="text-5xl md:text-6xl font-black text-center mb-16"
        initial="[object Object]"
        viewport="[object Object]"
        whileinview="[object Object]"
      >
        WHY TIPZ?
      </h2>
      <div
        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8"
      >
        <div
          class="card-brutalist hover:-translate-x-1 hover:-translate-y-1 transition-transform duration-200"
          initial="[object Object]"
          transition="[object Object]"
          viewport="[object Object]"
          whileinview="[object Object]"
        >
          <div
            class="mb-4"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-zap"
              fill="none"
              height="40"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
              />
            </svg>
          </div>
          <h3
            class="text-2xl font-bold mb-3 uppercase"
          >
            Lightning Fast
          </h3>
          <p
            class="text-gray-700"
          >
            3-5 second finality. Tips arrive instantly, not in weeks.
          </p>
        </div>
        <div
          class="card-brutalist hover:-translate-x-1 hover:-translate-y-1 transition-transform duration-200"
          initial="[object Object]"
          transition="[object Object]"
          viewport="[object Object]"
          whileinview="[object Object]"
        >
          <div
            class="mb-4"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-sparkles"
              fill="none"
              height="40"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
              />
              <path
                d="M20 2v4"
              />
              <path
                d="M22 4h-4"
              />
              <circle
                cx="4"
                cy="20"
                r="2"
              />
            </svg>
          </div>
          <h3
            class="text-2xl font-bold mb-3 uppercase"
          >
            Minimal Fees
          </h3>
          <p
            class="text-gray-700"
          >
            Only 2% withdrawal fee. Keep 98% of what you earn.
          </p>
        </div>
        <div
          class="card-brutalist hover:-translate-x-1 hover:-translate-y-1 transition-transform duration-200"
          initial="[object Object]"
          transition="[object Object]"
          viewport="[object Object]"
          whileinview="[object Object]"
        >
          <div
            class="mb-4"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-globe"
              fill="none"
              height="40"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"
              />
              <path
                d="M2 12h20"
              />
            </svg>
          </div>
          <h3
            class="text-2xl font-bold mb-3 uppercase"
          >
            Global Access
          </h3>
          <p
            class="text-gray-700"
          >
            Borderless payments. Anyone, anywhere, anytime.
          </p>
        </div>
        <div
          class="card-brutalist hover:-translate-x-1 hover:-translate-y-1 transition-transform duration-200"
          initial="[object Object]"
          transition="[object Object]"
          viewport="[object Object]"
          whileinview="[object Object]"
        >
          <div
            class="mb-4"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trophy"
              fill="none"
              height="40"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 14.66v1.626a2 2 0 0 1-.976 1.696A5 5 0 0 0 7 21.978"
              />
              <path
                d="M14 14.66v1.626a2 2 0 0 0 .976 1.696A5 5 0 0 1 17 21.978"
              />
              <path
                d="M18 9h1.5a1 1 0 0 0 0-5H18"
              />
              <path
                d="M4 22h16"
              />
              <path
                d="M6 9a6 6 0 0 0 12 0V3a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1z"
              />
              <path
                d="M6 9H4.5a1 1 0 0 1 0-5H6"
              />
            </svg>
          </div>
          <h3
            class="text-2xl font-bold mb-3 uppercase"
          >
            Credit Score
          </h3>
          <p
            class="text-gray-700"
          >
            Transparent credibility based on X (Twitter) metrics.
          </p>
        </div>
        <div
          class="card-brutalist hover:-translate-x-1 hover:-translate-y-1 transition-transform duration-200"
          initial="[object Object]"
          transition="[object Object]"
          viewport="[object Object]"
          whileinview="[object Object]"
        >
          <div
            class="mb-4"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-shield"
              fill="none"
              height="40"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
              />
            </svg>
          </div>
          <h3
            class="text-2xl font-bold mb-3 uppercase"
          >
            Fully On-Chain
          </h3>
          <p
            class="text-gray-700"
          >
            All transactions transparent and verifiable on Stellar.
          </p>
        </div>
        <div
          class="card-brutalist hover:-translate-x-1 hover:-translate-y-1 transition-transform duration-200"
          initial="[object Object]"
          transition="[object Object]"
          viewport="[object Object]"
          whileinview="[object Object]"
        >
          <div
            class="mb-4"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-sparkles"
              fill="none"
              height="40"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="40"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
              />
              <path
                d="M20 2v4"
              />
              <path
                d="M22 4h-4"
              />
              <circle
                cx="4"
                cy="20"
                r="2"
              />
            </svg>
          </div>
          <h3
            class="text-2xl font-bold mb-3 uppercase"
          >
            Simple URLs
          </h3>
          <p
            class="text-gray-700"
          >
            Share your tip page with @username everywhere.
          </p>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`HowItWorksSection snapshots > renders four steps with icons and descriptions 1`] = `
<div>
  <section
    class="py-20 px-4 bg-gray-50"
  >
    <div
      class="max-w-6xl mx-auto"
    >
      <h2
        class="text-3xl md:text-4xl font-bold text-center mb-4"
        initial="[object Object]"
        transition="[object Object]"
        viewport="[object Object]"
        whileinview="[object Object]"
      >
        HOW IT WORKS
      </h2>
      <p
        class="text-gray-500 text-center mb-16 max-w-xl mx-auto"
        initial="[object Object]"
        transition="[object Object]"
        viewport="[object Object]"
        whileinview="[object Object]"
      >
        Start receiving tips in four simple steps
      </p>
      <div
        class="hidden md:flex items-start justify-between gap-4"
      >
        <div
          class="flex flex-col items-center text-center flex-1"
          custom="0"
          initial="hidden"
          variants="[object Object]"
          viewport="[object Object]"
          whileinview="visible"
        >
          <div
            class="relative mb-4"
          >
            <div
              class="w-14 h-14 rounded-full bg-indigo-600 text-white flex items-center justify-center text-lg font-bold"
            >
              1
            </div>
            <div
              class="absolute -bottom-1 -right-1 w-8 h-8 rounded-full bg-indigo-100 text-indigo-600 flex items-center justify-center"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-wallet w-6 h-6"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 7V4a1 1 0 0 0-1-1H5a2 2 0 0 0 0 4h15a1 1 0 0 1 1 1v4h-3a2 2 0 0 0 0 4h3a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1"
                />
                <path
                  d="M3 5v14a2 2 0 0 0 2 2h15a1 1 0 0 0 1-1v-4"
                />
              </svg>
            </div>
          </div>
          <h3
            class="font-semibold text-lg mb-2"
          >
            Connect your Stellar wallet
          </h3>
          <p
            class="text-gray-500 text-sm leading-relaxed max-w-[200px]"
          >
            Link your Freighter or other Stellar wallet to get started in seconds.
          </p>
        </div>
        <div
          class="flex-shrink-0 mt-7 w-12 h-0.5 bg-indigo-200"
          initial="[object Object]"
          transition="[object Object]"
          viewport="[object Object]"
          whileinview="[object Object]"
        />
        <div
          class="flex flex-col items-center text-center flex-1"
          custom="1"
          initial="hidden"
          variants="[object Object]"
          viewport="[object Object]"
          whileinview="visible"
        >
          <div
            class="relative mb-4"
          >
            <div
              class="w-14 h-14 rounded-full bg-indigo-600 text-white flex items-center justify-center text-lg font-bold"
            >
              2
            </div>
            <div
              class="absolute -bottom-1 -right-1 w-8 h-8 rounded-full bg-indigo-100 text-indigo-600 flex items-center justify-center"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-user w-6 h-6"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
            </div>
          </div>
          <h3
            class="font-semibold text-lg mb-2"
          >
            Register your profile
          </h3>
          <p
            class="text-gray-500 text-sm leading-relaxed max-w-[200px]"
          >
            Create your unique creator profile with a custom username and bio.
          </p>
        </div>
        <div
          class="flex-shrink-0 mt-7 w-12 h-0.5 bg-indigo-200"
          initial="[object Object]"
          transition="[object Object]"
          viewport="[object Object]"
          whileinview="[object Object]"
        />
        <div
          class="flex flex-col items-center text-center flex-1"
          custom="2"
          initial="hidden"
          variants="[object Object]"
          viewport="[object Object]"
          whileinview="visible"
        >
          <div
            class="relative mb-4"
          >
            <div
              class="w-14 h-14 rounded-full bg-indigo-600 text-white flex items-center justify-center text-lg font-bold"
            >
              3
            </div>
            <div
              class="absolute -bottom-1 -right-1 w-8 h-8 rounded-full bg-indigo-100 text-indigo-600 flex items-center justify-center"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-link w-6 h-6"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
                />
                <path
                  d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
                />
              </svg>
            </div>
          </div>
          <h3
            class="font-semibold text-lg mb-2"
          >
            Share your tip link
          </h3>
          <p
            class="text-gray-500 text-sm leading-relaxed max-w-[200px]"
          >
            Share your personalized tip link on social media, streams, or anywhere.
          </p>
        </div>
        <div
          class="flex-shrink-0 mt-7 w-12 h-0.5 bg-indigo-200"
          initial="[object Object]"
          transition="[object Object]"
          viewport="[object Object]"
          whileinview="[object Object]"
        />
        <div
          class="flex flex-col items-center text-center flex-1"
          custom="3"
          initial="hidden"
          variants="[object Object]"
          viewport="[object Object]"
          whileinview="visible"
        >
          <div
            class="relative mb-4"
          >
            <div
              class="w-14 h-14 rounded-full bg-indigo-600 text-white flex items-center justify-center text-lg font-bold"
            >
              4
            </div>
            <div
              class="absolute -bottom-1 -right-1 w-8 h-8 rounded-full bg-indigo-100 text-indigo-600 flex items-center justify-center"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-zap w-6 h-6"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
                />
              </svg>
            </div>
          </div>
          <h3
            class="font-semibold text-lg mb-2"
          >
            Receive XLM tips!
          </h3>
          <p
            class="text-gray-500 text-sm leading-relaxed max-w-[200px]"
          >
            Supporters send XLM tips directly to your wallet — instant and fee-free.
          </p>
        </div>
      </div>
      <div
        class="flex flex-col gap-8 md:hidden"
      >
        <div
          class="flex items-start gap-4"
          custom="0"
          initial="hidden"
          variants="[object Object]"
          viewport="[object Object]"
          whileinview="visible"
        >
          <div
            class="relative flex-shrink-0"
          >
            <div
              class="w-12 h-12 rounded-full bg-indigo-600 text-white flex items-center justify-center text-base font-bold"
            >
              1
            </div>
            <div
              class="absolute -bottom-1 -right-1 w-7 h-7 rounded-full bg-indigo-100 text-indigo-600 flex items-center justify-center"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-wallet w-6 h-6"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 7V4a1 1 0 0 0-1-1H5a2 2 0 0 0 0 4h15a1 1 0 0 1 1 1v4h-3a2 2 0 0 0 0 4h3a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1"
                />
                <path
                  d="M3 5v14a2 2 0 0 0 2 2h15a1 1 0 0 0 1-1v-4"
                />
              </svg>
            </div>
            <div
              class="absolute top-14 left-1/2 -translate-x-1/2 w-0.5 h-8 bg-indigo-200"
            />
          </div>
          <div
            class="pt-1"
          >
            <h3
              class="font-semibold text-base mb-1"
            >
              Connect your Stellar wallet
            </h3>
            <p
              class="text-gray-500 text-sm leading-relaxed"
            >
              Link your Freighter or other Stellar wallet to get started in seconds.
            </p>
          </div>
        </div>
        <div
          class="flex items-start gap-4"
          custom="1"
          initial="hidden"
          variants="[object Object]"
          viewport="[object Object]"
          whileinview="visible"
        >
          <div
            class="relative flex-shrink-0"
          >
            <div
              class="w-12 h-12 rounded-full bg-indigo-600 text-white flex items-center justify-center text-base font-bold"
            >
              2
            </div>
            <div
              class="absolute -bottom-1 -right-1 w-7 h-7 rounded-full bg-indigo-100 text-indigo-600 flex items-center justify-center"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-user w-6 h-6"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
            </div>
            <div
              class="absolute top-14 left-1/2 -translate-x-1/2 w-0.5 h-8 bg-indigo-200"
            />
          </div>
          <div
            class="pt-1"
          >
            <h3
              class="font-semibold text-base mb-1"
            >
              Register your profile
            </h3>
            <p
              class="text-gray-500 text-sm leading-relaxed"
            >
              Create your unique creator profile with a custom username and bio.
            </p>
          </div>
        </div>
        <div
          class="flex items-start gap-4"
          custom="2"
          initial="hidden"
          variants="[object Object]"
          viewport="[object Object]"
          whileinview="visible"
        >
          <div
            class="relative flex-shrink-0"
          >
            <div
              class="w-12 h-12 rounded-full bg-indigo-600 text-white flex items-center justify-center text-base font-bold"
            >
              3
            </div>
            <div
              class="absolute -bottom-1 -right-1 w-7 h-7 rounded-full bg-indigo-100 text-indigo-600 flex items-center justify-center"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-link w-6 h-6"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
                />
                <path
                  d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
                />
              </svg>
            </div>
            <div
              class="absolute top-14 left-1/2 -translate-x-1/2 w-0.5 h-8 bg-indigo-200"
            />
          </div>
          <div
            class="pt-1"
          >
            <h3
              class="font-semibold text-base mb-1"
            >
              Share your tip link
            </h3>
            <p
              class="text-gray-500 text-sm leading-relaxed"
            >
              Share your personalized tip link on social media, streams, or anywhere.
            </p>
          </div>
        </div>
        <div
          class="flex items-start gap-4"
          custom="3"
          initial="hidden"
          variants="[object Object]"
          viewport="[object Object]"
          whileinview="visible"
        >
          <div
            class="relative flex-shrink-0"
          >
            <div
              class="w-12 h-12 rounded-full bg-indigo-600 text-white flex items-center justify-center text-base font-bold"
            >
              4
            </div>
            <div
              class="absolute -bottom-1 -right-1 w-7 h-7 rounded-full bg-indigo-100 text-indigo-600 flex items-center justify-center"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-zap w-6 h-6"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
                />
              </svg>
            </div>
          </div>
          <div
            class="pt-1"
          >
            <h3
              class="font-semibold text-base mb-1"
            >
              Receive XLM tips!
            </h3>
            <p
              class="text-gray-500 text-sm leading-relaxed"
            >
              Supporters send XLM tips directly to your wallet — instant and fee-free.
            </p>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`NotFoundPage snapshots > renders 404 page with navigation links 1`] = `
<div>
  <main
    class="max-w-4xl mx-auto px-4 py-8  focus:outline-none"
    id="main-content"
    tabindex="-1"
  >
    <div
      class="flex flex-col items-center justify-center min-h-[60vh] text-center"
    >
      <h1
        class="text-[12rem] font-black leading-none mb-4"
        style="text-shadow: 8px 8px 0px rgba(0,0,0,0.2); letter-spacing: -0.05em;"
      >
        404
      </h1>
      <p
        class="text-2xl font-bold uppercase tracking-wide mb-8"
      >
        Page not found
      </p>
      <a
        data-discover="true"
        href="/"
      >
        <button
          class="inline-flex items-center justify-center gap-2 font-bold uppercase tracking-wide transition-transform duration-200 border-2 border-black focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 bg-black text-white hover:-translate-x-1 hover:-translate-y-1 px-8 py-4 text-lg "
          style="box-shadow: 4px 4px 0px 0px rgba(0,0,0,1);"
        >
          Go Home
        </button>
      </a>
      <a
        class="mt-6 text-lg font-semibold uppercase tracking-wide underline hover:no-underline transition-all"
        data-discover="true"
        href="/leaderboard"
      >
        Browse Leaderboard
      </a>
    </div>
  </main>
</div>
`;
